Fix button jump by uniting the width at which we switch to mobile view

--- a/styles/squarespace.less
+++ b/styles/squarespace.less
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: @smallScreenWidth) {
   .sqs-layout [class*=sqs-col] {
     float: none !important;
     width: auto !important;
